# FlexSeq

./: .gitignore  AI_context.sh  FlexSeq_context.txt  README.md  default_config.yaml  maxed_config.yaml  pyproject.toml  setup.py
flexseq/: __init__.py  cli.py  config.py  pipeline.py
flexseq/data/: __init__.py  loader.py  processor.py
flexseq/models/: __init__.py  base.py  neural_network.py  random_forest.py
flexseq/temperature/: __init__.py  comparison.py
flexseq/utils/: __init__.py  helpers.py  metrics.py  temperature_comparison_visualizer.py  visualization.py
test/: generate_test_data.py  test_models.py  test_pipeline.py  test_temperature_comparison.py
test/test_data/: temperature_320_train.csv  temperature_450_train.csv  temperature_average_train.csv
